[package]
name = "shadowenv"
version = "1.0.0"
edition = "2024"

[dependencies]
# CLI & Interaction
clap = { version = "4.4", features = ["derive"] }
inquire = "0.6"     # Interactive menus and validation
colored = "2.0"     # ANSI colors
console = "0.15"    # Terminal manipulation (clearing screen)
rpassword = "7.0"   # Keep for non-interactive CLI mode

# Serialization & IO
tar = "0.4"
zstd = "0.13"
walkdir = "2.4"

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
